# FinAudit

./: .gitignore  CLAUDE.md  README.md  finance.db  main.py  pyproject.toml
.hypothesis/examples/04e6b3400353b141/: 2afd90112dc32669  35c5e9bd4cb3de47  3e796cce7fd62ac9  6dbf729baf85a113  71d9d0253d22b449  7c0e00b7f5f5102a  7f69c6e8ea78a2a7  99576f129e745702  99f032a8e081c475  c4d04a822cb9527c  e1a55549930da33f
.hypothesis/examples/35c5e9bd4cb3de47/: 58bab083588f9d03
.hypothesis/examples/71d9d0253d22b449/: 36ab65f7ad68b33c  772c27ec4daacd4f
.hypothesis/examples/7c0e00b7f5f5102a/: fbca8891a16a93ba
.hypothesis/examples/7f69c6e8ea78a2a7/: f4d4a1ae5a42d707
.hypothesis/examples/99f032a8e081c475/: c79b8ecf8f193caf  de22e7f70cb9f1ba
.hypothesis/examples/e1a55549930da33f/: 288350fee63c278f
.kiro/specs/personal-finance-audit/: .config.kiro  design.md  requirements.md  tasks.md
app/: main.py
app/adapters/: __init__.py  axis.py  base.py  credit_card.py  hdfc.py  icici.py  kotak.py  sbi.py
app/models/: database.py  db.py  schemas.py
app/routes/: analytics.py  rules.py  transactions.py  upload.py
app/services/: anomaly_detector.py  categorization.py  duplicate_filter.py  exceptions.py  pdf_parser.py  rule_service.py
tests/fixtures/: axis.csv  credit_card.csv  hdfc.csv  icici.csv  kotak.csv  sbi.csv
tests/integration/: test_api_anomalies.py  test_api_corrections.py  test_api_upload.py
tests/property/: test_properties.py
tests/smoke/: test_smoke.py
tests/unit/: test_bank_adapters.py  test_pdf_parser.py
ui/: app.py
